improve popup with "Go to Timer Page" logic

--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,10 @@
 <body>
   <h2>Timer Keeper Active</h2>
   <div id="status" class="status">Checking status...</div>
+  <button id="goToTimerPage" style="display:none; margin: 10px auto; padding: 8px 16px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">
+    Go to Timer Page
+  </button>
+
   <div class="info">
     This extension keeps your timer active even when Chrome is in battery saver mode.
     <br><br>
